--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 			<link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
 			<link rel="stylesheet" type="text/css" href="css/style.production.css">
 		<title>
-			Welcome to my portfolio website
+			Contact Nathan Najera
 		</title>
 	</head>
 	<body>
