Spell check and title change
If applied this commit will capitalize spelling and change the names of my page titles

--- a/index.html
+++ b/index.html
@@ -13,28 +13,27 @@
 	</head>
 	<body>
 		<header class="page-header">
-			<!-- filler logo added -->
 			<img src="img/Website-logo.png" alt="portfolio logo" class="Website-logo">
 			<nav class="page-header_item">
 				<ul role="menubar" class="navigation-list">
 					<li role="presentation">
 						<a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">
-							home
+							Home
 						</a>
 					</li>
 					<li role="presentation">
 						<a href="about.html" role="menuitem" class="navigation-list__item navigation-list__item--active">
-							about me
+							About me
 						</a>
 					</li>
 					<li role="presentation">
 						<a href="work.html" role="menuitem" class="navigation-list__item navigation-list__item--active">
-							work
+							Work
 						</a>
 					</li>
 					<li role="presentation">
 						<a href="contact.html" role="menuitem" class="navigation-list__item navigation-list__item--active">
-							contact
+							Contact
 						</a>
 					</li>
 				</ul>
