--- a/about.html
+++ b/about.html
@@ -13,28 +13,27 @@
 	</head>
 	<body>
 		<header class="page-header">	
-			<!-- filler logo added -->
 			<img src="img/Website-logo.png" alt="portfolio logo" class="Website-logo">
 			<nav class="page-header_item">
 				<ul role="menubar" class="navigation-list">
 					<li role="presentation">
 						<a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">
-							home
+							Home
 						</a>
 					</li>
 					<li role="presentation">
 						<a href="about.html" role="menuitem" class="navigation-list__item navigation-list__item--active">
-							about me
+							About me
 						</a>
 					</li>
 					<li role="presentation">
 						<a href="work.html" role="menuitem" class="navigation-list__item navigation-list__item--active">
-							work
+							Work
 						</a>
 					</li>
 					<li role="presentation">
 						<a href="contact.html" role="menuitem" class="navigation-list__item navigation-list__item--active">
-							contact
+							Contact
 						</a>
 					</li>
 				</ul>
@@ -48,9 +47,9 @@
 				<table>
 					<thead>
 						<tr>
-							<td>skills</td>
-							<td>years of experience</td>
-							<td>level of expertise</td>
+							<td>Skills</td>
+							<td>Years of experience</td>
+							<td>Level of expertise</td>
 						</tr>
 					</thead>
 					<tbody>
@@ -1008,7 +1007,7 @@
  	   </svg>
 		</main>
 		<footer class="page-footer">
-			<p>socials are linked below</p>
+			<p>Socials are linked below</p>
 			<!-- add my own image here, and create business socials for the links -->
 			<div class="social-media">
 				<img src="img/github_icon.svg" alt="github">
