--- a/contact.html
+++ b/contact.html
@@ -19,22 +19,22 @@
 				<ul role="menubar" class="navigation-list">
 					<li role="presentation">
 						<a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">
-							home
+							Home
 						</a>
 					</li>
 					<li role="presentation">
 						<a href="about.html" role="menuitem" class="navigation-list__item navigation-list__item--active">
-							about me
+							About me
 						</a>
 					</li>
 					<li role="presentation">
 						<a href="work.html" role="menuitem" class="navigation-list__item navigation-list__item--active">
-							work
+							Work
 						</a>
 					</li>
 					<li role="presentation">
 						<a href="contact.html" role="menuitem" class="navigation-list__item navigation-list__item--active">
-							contact
+							Contact
 						</a>
 					</li>
 				</ul>
@@ -79,7 +79,7 @@
 			</form>
 		</main>
 		<footer class="page-footer">
-			<p>socials are linked below</p>
+			<p>Socials are linked below</p>
 			<!-- add my own image here, and create business socials for the links -->
 			<div class="social-media">
 				<img src="img/github_icon.svg" alt="github">
