--- a/work.html
+++ b/work.html
@@ -8,40 +8,39 @@
 			<link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
 			<link rel="stylesheet" type="text/css" href="css/style.production.css">
 		<title>
-			Welcome to my website
+			View my work
 		</title>
 	</head>
 	<body>
 		<header class="page-header">
-			<!-- filler logo added -->
 			<img src="img/Website-logo.png" alt="portfolio logo" class="Website-logo">
 			<nav class="main-navigation page-header_item">
 				<ul role="menubar" class="navigation-list">
 					<li role="presentation">
 						<a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">
-							home
+							Home
 						</a>
 					</li>
 					<li role="presentation">
 						<a href="about.html" role="menuitem" class="navigation-list__item navigation-list__item--active">
-							about me
+							About me
 						</a>
 					</li>
 					<li role="presentation">
 						<a href="contact.html" role="menuitem" class="navigation-list__item navigation-list__item--active">
-							work
+							Work
 						</a>
 					</li>
 					<li role="presentation">
 						<a href="contact.html" role="menuitem" class="navigation-list__item navigation-list__item--active">
-							contact		
+							Contact	me	
 						</a>
 					</li>
 				</ul>
 			</nav>
 		</header>
 		<section class="whole-grid">
-			<h1>work</h1>
+			<h1>Work</h1>
 			<div class="grid">
 				<div class="grid_item">1</div>
 				<div class="grid_item">2</div>
@@ -52,7 +51,7 @@
 			</div>
 		</section>
 		<footer class="page-footer">
-			<p>socials are linked below</p>
+			<p>Socials are linked below</p>
 			<!-- create business socials for the links -->
 			<div class="social-media">
 				<img src="img/github_icon.svg" alt="github">
