optimization for e-reader
If applied this commit will clarify what my phone number is for e-readers

--- a/contact.html
+++ b/contact.html
@@ -44,18 +44,20 @@
 			<h1>Contact</h1>
 				<p>Email:
 					<a href="mailto:NathanNajera@yahoo.com">
-					NathanNajera@yahoo.com
+						NathanNajera@yahoo.com
 					</a>
 				</p>
 				<p>Phone number:
-					<a href="tel:6822039198" role="phone number">
-					(682)-203-9198
+					<a href="tel:6822039198" aria-label="phone number">
+						(682)-203-9198
 					</a>
 				</p>
-				<a href="mailto:NathanNajera@yahoo.com">
-					Contact me
-				</a>
-			<form action="" method="post">
+				<p>
+					<a href="mailto:NathanNajera@yahoo.com">
+						Contact me
+					</a>
+				</p>
+			<form method="post">
 				<p>
 					<label class="standard-label" for="contact-email">
 						E-mail:
