--- a/work.html
+++ b/work.html
@@ -33,7 +33,7 @@
 					</li>
 					<li role="presentation">
 						<a href="contact.html" role="menuitem" class="navigation-list__item navigation-list__item--active">
-							Contact	me	
+							Contact
 						</a>
 					</li>
 				</ul>
