deleted placeholder button + linked to work page
if applied this commit will delete the place holder buttons, and link "click here to see some of my work" to my work.html page

--- a/index.html
+++ b/index.html
@@ -48,14 +48,9 @@
 					My name is Nathan Najera. I am a <span>web</span> developer from texas.
 				</p>
 				<p>
-					<a href="#">
+					<a href="work.html">
 						Click here to see some of my work
 					</a>
-				</p>
-				<p>
-					<a href="#">default link</a>
-					<button type="button">default button</button>
-					<button class="button_secondary">secondary button</button>
 				</p>
 		</main>
 		<footer class="page-footer">
