cleaning up the contact form
if applied this commit will bring each input onto it's own line and clean up the overall look of the contact form.

--- a/contact.html
+++ b/contact.html
@@ -57,26 +57,34 @@
 						Contact me
 					</a>
 				</p>
-			<form method="post">
+			<form method="post" class="standard-label">
 				<p>
 					<label class="standard-label" for="contact-email">
 						E-mail:
 					</label>
+				</p>
+				<p>
 						<input type="email" id="contact-email" required>
 				</p>
 				<p>
 					<label class="standard-label" for="contact-tel">
 						Telephone:
 					</label>
-						<input type="tel" id="contact-tel" pattern="\d{3}[\-]\d{3}[\-]\d{4}">
+				</p>
+				<p>
+					<input type="tel" id="contact-tel" pattern="\d{3}[\-]\d{3}[\-]\d{4}">
 				</p>
 				<p>
 					<label class="standard-label" for="contact-form">
 						Message:
 					</label>
-						<textarea id="contact-form" maxlength="240" required>
-						</textarea>
-						<input type="submit" value="Send message">
+				</p>
+				<p>
+					<textarea id="contact-form" maxlength="240" required>
+					</textarea>
+				</p>
+				<p>
+					<input type="submit" value="Send message">
 				</p>
 			</form>
 		</main>
